--- a/css/reset.css
+++ b/css/reset.css
@@ -3,7 +3,7 @@
 /* common */
 :root {
   --bg: #f2f2f4;
-  --bg: #fafafa;
+  --sbg: #fafafa;
   --panel: #ffffff;
   --line: #e5e5e8;
   --text: #111111;
