--- a/css/reset.css
+++ b/css/reset.css
@@ -2,21 +2,27 @@
 
 /* common */
 :root {
-  --bg: #f2f2f4;
+  /* --bg: #f2f2f4;
   --sbg: #fafafa;
   --panel: #ffffff;
   --line: #e5e5e8;
   --text: #111111;
-  --muted: #7a7a7a;
+  --muted: #7a7a7a; */
+  --d1: #111;
+  --d2: #353535;
+  --d3: #7a7a7a;
+  --l1: #fff;
+  --l2: #fafafa;
+  --l3: #e5e5e8;
   --radius-lg: 20px;
-  --radius-sm: 12px;
+  --radius-sm: 4px;
   font-size: 14px;
   scroll-behavior: smooth;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-  background: var(--bg);
-  color: var(--text);
+  background: var(--d1);
+  color: var(--l2);
 }
 
 /* reset */
