--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 @import url(reset.css);
-@import url(left_sidebar.css);
+@import url(include.css);
 @import url(player_bar.css);
 
 .layout {
@@ -25,19 +25,6 @@
 .layout.sidebar_collapsed {
   grid-template-columns: 64px 1fr 300px;
   gap: 12px;
-}
-.top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.search {
-  width: 360px;
-  height: 40px;
-  padding: 0 16px;
-  border-radius: var(--radius-lg);
-  border: 1px solid var(--l2);
-  background: var(--l2);
 }
 
 
