--- a/css/include.css
+++ b/css/include.css
@@ -13,10 +13,9 @@
   width: 64px;
   padding: 24px 8px;
 }
-.left_sidebar.is_collapsed .nav>a,
+.left_sidebar.is_collapsed .nav,
 .left_sidebar.is_collapsed .user_menu {
-  opacity: 0;
-  pointer-events: none;
+  display: none;
 }
 .nav,
 .auth_links {
@@ -28,10 +27,6 @@
 .ico_nav {
   display: none;
 }
-.left_sidebar .ico_nav a .nav>a,
-.user_menu li:last-child {
-  transition: opacity 0.2s ease;
-}
 .ico_nav img {
   width: 50px;
 }
@@ -42,7 +37,15 @@
   margin-top: 10px;
 }
 .left_sidebar .ico_nav a:hover {
-  transform: translateY(-4px);
+  /* transform: translateY(-4px); */
+  filter: invert(16%) sepia(89%) saturate(6054%) hue-rotate(0deg) brightness(80%) contrast(120%);
+  transform: scale(1.05);
+}
+.ico_nav a.active {
+  filter: invert(16%) sepia(89%) saturate(6054%) hue-rotate(0deg) brightness(70%) contrast(120%);
+}
+.nav {
+  display: block;
 }
 .nav a {
   display: flex;
@@ -53,7 +56,7 @@
   color: var(--d2);
 }
 .nav a:hover {
-  color: #c90000;
+  color: var(--r1);
 }
 .nav a.active {
   background: var(--d1);
@@ -73,6 +76,7 @@
   border-radius: var(--radius-lg);
   border: 1px solid var(--l2);
   background: var(--l2);
+  border: 1px solid var(--l4);
 }
 .user_menu {
   display: flex;
