--- a/css/reset.css
+++ b/css/reset.css
@@ -2,19 +2,16 @@
 
 /* common */
 :root {
-  /* --bg: #f2f2f4;
-  --sbg: #fafafa;
-  --panel: #ffffff;
-  --line: #e5e5e8;
-  --text: #111111;
-  --muted: #7a7a7a; */
   --d1: #111;
   --d2: #353535;
   --d3: #7a7a7a;
   --l1: #fff;
   --l2: #fafafa;
-  --l3: #e5e5e8;
-  --l4: #ccc;
+  --l3: #f2f2f4;
+  --l4: #e5e5e8;
+  --l5: #ccc;
+  --r1: #c90000;
+  --r2: #820000;
   --radius-lg: 20px;
   --radius-sm: 4px;
   font-size: 14px;
@@ -22,8 +19,8 @@
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-  background: var(--d1);
-  color: var(--l2);
+  background: var(--l3);
+  color: var(--d1);
 }
 
 /* reset */
