--- a/css/include.css
+++ b/css/include.css
@@ -38,7 +38,7 @@
 }
 .left_sidebar .ico_nav a:hover {
   /* transform: translateY(-4px); */
-  filter: invert(16%) sepia(89%) saturate(6054%) hue-rotate(0deg) brightness(80%) contrast(120%);
+  /* filter: invert(16%) sepia(89%) saturate(6054%) hue-rotate(0deg) brightness(80%) contrast(120%); */
   transform: scale(1.05);
 }
 .ico_nav a.active {
